--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
 </head>
 <body>
     <header>
-        <div class="logo"><span>Belles</span> et Couronnées</div>
+        <a href="#" class="logo"><span>Belles</span> et Couronnées<a>
         <ul class="navbar">
             <li><a href="#">Accueil</a></li>
             <li><a href="#">Soins et Conseilles</a></li>
-            <li><a href="#">histoire</a></li>
-            <li><a href="#">coiffures protectrices</a></li>
+            <li><a href="#">Histoire</a></li>
+            <li><a href="#">Coiffures protectrices</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </header>
     <section class="banniere" id="bannière">
-        <div class="logo"><span>Belles</span> et Couronnées</div>
         <div class="contenu">
             <h2>Sublime Tes Cheveux Texturés-Types 4</h2>
             <p>Des soins,conseilles et inspirations de coiffures pour révéler toute la beauté de tes boucles serrées, crépues,et puissantes.Parce que ton afro est une couronne.</p>
-
+            <a href="#" class="btn1">Soins et Conseilles</a>
+            <a href="#" class="btn2">Coiffures protectrices</a>
         </div>
     </section>
     <section class="apropos " id="apropos">
