--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <header>
         <a href="#" class="logo"><span>Belles</span> et Couronnées<a>
         <ul class="navbar">
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Soins et Conseilles</a></li>
-            <li><a href="#">Histoire</a></li>
-            <li><a href="#">Coiffures protectrices</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#banniere">Accueil</a></li>
+            <li><a href="#soins">Soins et Conseils</a></li>
+            <li><a href="#histoires">Histoire</a></li>
+            <li><a href="#coiffures">Coiffures protectrices</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </header>
-    <section class="banniere" id="bannière">
+    <section class="banniere" id="banniere">
         <div class="contenu">
             <h2>Sublime Tes Cheveux Texturés-Types 4</h2>
-            <p>Des soins,conseilles et inspirations de coiffures pour révéler toute la beauté de tes boucles serrées, crépues,et puissantes.Parce que ton afro est une couronne.</p>
+            <p>Des soins,conseils et inspirations de coiffures pour révéler toute la beauté de tes boucles serrées, crépues,et puissantes.Parce que ton afro est une couronne.</p>
             <a href="#" class="btn1">Soins et Conseilles</a>
             <a href="#" class="btn2">Coiffures protectrices</a>
         </div>
@@ -40,6 +40,129 @@
             <div class="collis">
                 <div class="img">
                     <img src="./images/apropos.jpg" alt="images">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="soins" id="soins">
+        <div class="container">
+            <h2 class="titre-texte"><span>S</span>oins et Conseils</h2>
+            <div class="soins-intro">
+                <p>Les cheveux de type 4(4A,4B,4C) sont magniques mais demandent des soins adaptés. Voici notre guide complet.</p>
+            </div>
+            <div class="soins-content">
+                <div class="soisn-section">
+                    <h3>Les bases à connaitre</h3>
+                    <ul>
+                        <li><strong>Hydratation</strong>: la clé ! les cheveux crépus sont naturellement secs. l'eau  est le meilleur hydratation.</li>
+                        <li><strong>Sceller l'hydration</strong>: appliquer une huile après avoir hydraté permet de garder l'eau dans le cheveu.</li>
+                        <li><strong>Démelage doux</strong>: sur cheveux mouillés,avec les doigts ou un peigne à dents larges.jamais à sec.</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Méthodesd'hydratation</h3>
+                    <div class="methode">
+                        <h4>LOC</h4>
+                        <p>Liquid (eau ou leave-in)'n Oil(huile)'n Cream(crème hydratante)</p>
+                    </div>
+                    <div class="methode">
+                        <h4>LCO</h4>
+                        <p>Testez les deux,choisissez ce qui convient à vos cheveux.</p>
+
+                    </div>
+                    <div class="types-container">
+                        <div class="type-card">
+                            <h4>Types 4A</h4>
+                            <p>Boucles serrées en forme de spirles, assez définies.</p>
+                            <div class="routine">
+                                <h5>Routine :</h5>
+                                <ul>
+                                    <li>Hydrater 3x/semaine</li>
+                                    <li>Co-wash entre les lavages</li>
+                                    <li>Définir les boucles avec des gels légers exemple: le gel eco</li>
+                                </ul>
+
+                            </div>
+                            <div class="produits">
+                                <h5>Produits conseillés</h5>
+                                <p>leacve-in de shea moisture,huile de coco, crème cantu.</p>
+                            </div>
+                        </div>
+                        <di class="type-card">
+                            <h4>Types 4B</h4>
+                            <p>Boucles en "Z", peu définies, tendance à shrinker(rétrécir).</p>
+                            <div class="routine">
+                                <h5>Routine :</h5>
+                                <ul>
+                                    <li>HYdratation quotidienne en  spray</li>
+                                    <li>Bains d'huiles 1x/semaines</li>
+                                    <li>Démélages aux doigts</li>
+                                </ul>
+                            </div>
+                            <div class="produits">
+                                <h5>Produits :</h5>
+                                <p>Beurre de karité, huile de ricin,leave-in ORS.</p>
+                            </div>
+                        </di>
+                        <div class="type-card">
+                            <h4>Type 4C</h4>
+                            <p>Trés dense , peu de définition naturelle, trés  fragile.</p>
+                            <div classe="routine">
+                                <h5>Routine :</h5>
+                                <ul>
+                                    <li>Hydratation quotidienne</li>
+                                    <li>Masque protéiné 2x/mois</li>
+                                    <li>Braids ou twist en coiffures protectrices</li>
+                                </ul>
+                            </div>
+                            <div class="conseils">
+                                <h5>Conseils :</h5>
+                                <p>Toujours protéger avec un bonnet en satin. éviter les manipulations fréquentes.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="soins-section produits-section">
+                        <h3>Produits accessibles en Afriques(et partout dans le monde)</h3>
+                        <div class="produits-grid">
+                            <div class="produits-categorie">
+                                <h4>Shampoing :</h4>
+                                <p> ORS oil,Elive hydra,Garnier ultra-doux</p>
+                            </div>
+                            <div class="produits-categorie">
+                                <h4>Leave-in</h4>
+                                <p>Cantu, Shea Moisture(si dispo),ORS</p>
+                            </div>
+                            <div class="produits-categorie">
+                                <h4>huiles :</h4>
+                                <p>Huile de ricin,Huile d'oilive,Huiles de coco,Huile de moutarde (huile de chebe)</p>
+                            </div>
+                            <div class="produits-categorie">
+                                <h4>Crème :</h4>
+                                <p>African Pride , Shea Moisture, Beurre de Karité, Camille Rose,Cantu shea butter</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="soisn-section vocabulaire">
+                        <h3>Vocabulaire à connaitre</h3>
+                        <div classe="termes">
+                            <div class="terme">
+                                <h4>Big chop :</h4>
+                                <p>couper les cheveux défrisés pour repartir au naturel</p>
+                            </div>
+                            <div class="terme">
+                                <h4>Leave-in :</h4>
+                                <p>Soin sans rinçage</p>
+                            </div>
+                            <div class="terme">
+                                <h4>Shrinkage :</h4>
+                                <p>Rétrécissement des cheveux en contact avec l'humidité</p>
+                            </div>
+                            <div class="terme">
+                                <h4>Edges :</h4>
+                                <p>Bords des cheveux, à protéger avec soin</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
