--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul class="navbar">
             <li><a href="#banniere">Accueil</a></li>
             <li><a href="#soins">Soins et Conseils</a></li>
-            <li><a href="#histoires">Histoire</a></li>
+            <li><a href="#histoires">Histoires et Cultures</a></li>
             <li><a href="#coiffures">Coiffures protectrices</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -161,6 +161,77 @@
                                 <h4>Edges :</h4>
                                 <p>Bords des cheveux, à protéger avec soin</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="histoire" id="histoires">
+        <div class="container2">
+            <h2 class="titre-texte"><span>H</span>istoire et Culture</h2>
+            <div class="histoire-intro">
+                <p>Les cheveux afro, en particulier les types 4(4A,4B,4c), sont bien plus qu'un texture capillaire : ils portent une histoire riche, profonde,souvent marquée par la fierté, la résistance et la trasmission culturelles.</p>
+            </div>
+            <div class="histoire-content">
+                <div class="histoire-content">
+                    <h3>Origines africaines</h3>
+                    <div class="timeline">
+                        <div class="timeline-item">
+                            <div class="timeline-date">5000+ ans</div>
+                            <div class="timeline-content">
+                                <h4>Tresses(cornrows)</h4>
+                                <p>Utilisées pour signaler la tribu, le statut social, la situation familiale. Pendant la traite négrière,ces coiffures devenaient parfois des cartes secrètes.</p>
+
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-date">3000+ ans</div>
+                            <div class="timeline-content">
+                                <h4>Bantu knots</h4>
+                                <p>Originaires des peuples Bantu d'Afrique centrale et australe,portés lors des cérémonies rituelles.</p>
+                            </div>
+                        </div>
+                        <div class="timeline-item">
+                            <div class="timeline-date">Antiquité</div>
+                            <div class="timeline-content">
+                                <h4>Drealocks</h4>
+                                <p>Symbolique spirituelle forte en Ethopie, notamment dans les cultures rastafariennnes.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="histoire-section resistance">
+                    <h3>Coiffures et Résistance</h3>
+                    <div class="resistance-grid">
+                        <div class="resistance-card">
+                            <div class="resistance-era">Esclavage</div>
+                            <div class="resistance-content">
+                                <p>Mouvement "Blcack is Beautiful". Le port de l'afro devient un acte politique.</p>
+                            </div>
+                        </div>
+                        <div class="resistance-card">
+                            <div class="resistance-era">1960-70</div>
+                            <div class="resistance-content">
+                                <p>Coiffures comme<strong>box braids</strong>, <strong>twists</strong>, <strong>locks</strong>,portées fièrement dans le monde entier.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="culture-vivante">
+                    <h3>Une culture vivante</h3>
+                    <div class="culture-content">
+                        <p>Symbole fort d'identité et d'héritage, inspirant les tendances mondiales. Pourtant, la discrimination capillaire persiste dans certains milieux professionnels ou scolaires.</p>
+
+                        <div class="saviez-vous">
+                            <h4>A savoir :</h4>
+                            <ul>
+                                <li>Les <strong>cornrows</strong> ont plus de 3000 ans </li>
+                                <li>Les <strong>Bantu knots</strong> sont originaires d'Afrique centrale</li>
+                                <li>Les <strong>dreads</strong> étaient portés par des pretres africains bien avant le mouvement rasta</li>
+                                <li>Lois contre les cheveux afro existe à une certaine époque(ex: loi de tignon, 1786 en louisiane</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
