--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="contenu">
             <h2>Sublime Tes Cheveux Texturés-Types 4</h2>
             <p>Des soins,conseils et inspirations de coiffures pour révéler toute la beauté de tes boucles serrées, crépues,et puissantes.Parce que ton afro est une couronne.</p>
-            <a href="#" class="btn1">Soins et Conseilles</a>
-            <a href="#" class="btn2">Coiffures protectrices</a>
+            <a href="#soins" class="btn1">Soins et Conseilles</a>
+            <a href="#coiffures" class="btn2">Coiffures protectrices</a>
         </div>
     </section>
     <section class="apropos " id="apropos">
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="soisn-section vocabulaire">
+                    <div class="soins-section vocabulaire">
                         <h3>Vocabulaire à connaitre</h3>
                         <div classe="termes">
                             <div class="terme">
@@ -238,6 +238,116 @@
             </div>
         </div>
     </section>
+    <section class="coiffures" id="coiffures">
+        <h2><span>C</span>oiffures protectrices</h2>
+        <div class="diaporama-container">
+            <div class="diaporama">
+                <div class="slide active">
+                    <img src="images/baldie braids.jpg" alt="bald cornrows" loading="lazy">
+                    <div class="slide-info">
+                        <h3>1. Baldie braids</h3>
+                        <p>super pour les cheveux courts</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/bantouknots.jpg" alt="bantou knots" loading="lazy">
+                    <div class="slide-info">
+                        <h3>2. Bantu knots </h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/boxbraids.jpg" alt="boxbraids" loading="lazy">
+                    <div class="slide-info">
+                        <h3>3. Box braids</h3>
+                        <p>tout le monde fait des knotless braids pour eviter la douleur mais les boxbraids restent plus protectrices</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/bubble braids.jpg" alt="bubble braids" loading="lazy">
+                    <div class="slide-info">
+                        <h3>4. Bubble braids</h3>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/cornrows (2).jpg" alt="cornrows" loading="lazy">
+                    <div class="slide-info">
+                        <h3>5. Cornrows</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/cornrows stylish.jpg" alt="cornrows stylish" loading="lazy">
+                    <div class="slide-info">
+                        <h3>6. Cornrows plus stylé</h3>
+                        <p>pour des occasions, célébrations parce que nous n'avons pas besions d'acheter des perruques pour des occasions nos cheveux naturelles font l'affaire</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/cornrows twisted.jpg" alt=" cornrows twisted" loading="lazy">
+                    <div class="slide-info">
+                        <h3>7. Cornrows twisted</h3>
+                        <p> des tresses collés qui finnissent par des twists</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/crownbun.jpg" alt="crownbun" loading="lazy">
+                    <div class="slide-info">
+                        <h3>8. Crownbun</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img  src="images/flatte twists.jpg" alt="flatte twist" loading="lazy">
+                    <div class="slide-info">
+                        <h3>9. Flat twists</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/headwrap.jpg" alt="headwrap" loading="lazy">
+                    <div class="slide-info">
+                        <h3>10. Headwrap(foulard à cheveux)</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/invisible locs.jpg" alt="invisible locks" loading="lazy">
+                    <div class="slide-info">
+                        <h3>11. Invisible locs</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/korobo braids.jpg" alt="korobo braids" loading="lazy">
+                    <div class="slide-info">
+                        <h3>12. Korobo braids</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/minitwists.jpg" alt="minitwists" loading="lazy">
+                    <div class="slide-info">
+                        <h3>13.Minitwists</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/puffy bubble braids.jpg" alt="puffy bubble braids" loading="lazy">
+                    <div class="slide-info">
+                        <h3>14. Puffy bubble braids</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/stylishbantouknots.jpg" alt="stylishbantouknots" loading="lazy">
+                    <div class="slide-info">
+                        <h3>15 Bantu knots avec quelque braids</h3>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="images/tresseaufil.jpg" alt="tresseaufil" loading="lazy">
+                    <div class="slide-info">
+                        <h3>16.Tresse au fil</h3>
+                    </div>
+                </div>
+            </div>
+            <button class="prev" aria-label="Précédent">&#10094;</button>
+            <button class="next" aria-label="Suivant">&#10095;</button>
 
+        <div class="indicateurs">
+        </div>
+    </section>
 </body>
 </html>
