--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <li><strong>Hydratation</strong>: la clé ! les cheveux crépus sont naturellement secs. l'eau  est le meilleur hydratation.</li>
                         <li><strong>Sceller l'hydration</strong>: appliquer une huile après avoir hydraté permet de garder l'eau dans le cheveu.</li>
                         <li><strong>Démelage doux</strong>: sur cheveux mouillés,avec les doigts ou un peigne à dents larges.jamais à sec.</li>
+                        <li><strong>Massage cranien</strong> : un massage du craine avec des huiles essentielles pour protéger le cuir chevelu et favoriser la pousse </li>
                     </ul>
                 </div>
                 <div>
@@ -208,13 +209,13 @@
                         <div class="resistance-card">
                             <div class="resistance-era">Esclavage</div>
                             <div class="resistance-content">
-                                <p>Mouvement "Blcack is Beautiful". Le port de l'afro devient un acte politique.</p>
+                                <p>Mouvement "Black is Beautiful". Le port de l'afro devient un acte politique.</p>
                             </div>
                         </div>
                         <div class="resistance-card">
                             <div class="resistance-era">1960-70</div>
                             <div class="resistance-content">
-                                <p>Coiffures comme<strong>box braids</strong>, <strong>twists</strong>, <strong>locks</strong>,portées fièrement dans le monde entier.</p>
+                                <p>Coiffures comme<strong> box braids</strong>, <strong> twists</strong>, <strong> locks</strong>,portées fièrement dans le monde entier.</p>
                             </div>
                         </div>
                     </div>
@@ -240,114 +241,114 @@
     </section>
     <section class="coiffures" id="coiffures">
         <h2><span>C</span>oiffures protectrices</h2>
-        <div class="diaporama-container">
-            <div class="diaporama">
-                <div class="slide active">
+        <div class="coiffures-horizontale">
+            <div class="grille">
+                <div class="item-horizantale">
                     <img src="images/baldie braids.jpg" alt="bald cornrows" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>1. Baldie braids</h3>
                         <p>super pour les cheveux courts</p>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/bantouknots.jpg" alt="bantou knots" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>2. Bantu knots </h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/boxbraids.jpg" alt="boxbraids" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>3. Box braids</h3>
                         <p>tout le monde fait des knotless braids pour eviter la douleur mais les boxbraids restent plus protectrices</p>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/bubble braids.jpg" alt="bubble braids" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>4. Bubble braids</h3>
                     </div>
                 </div>
-                <div>
+                <div class="item-horizantale">
                     <img src="images/cornrows (2).jpg" alt="cornrows" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>5. Cornrows</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/cornrows stylish.jpg" alt="cornrows stylish" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>6. Cornrows plus stylé</h3>
                         <p>pour des occasions, célébrations parce que nous n'avons pas besions d'acheter des perruques pour des occasions nos cheveux naturelles font l'affaire</p>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/cornrows twisted.jpg" alt=" cornrows twisted" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>7. Cornrows twisted</h3>
                         <p> des tresses collés qui finnissent par des twists</p>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/crownbun.jpg" alt="crownbun" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>8. Crownbun</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img  src="images/flatte twists.jpg" alt="flatte twist" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>9. Flat twists</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/headwrap.jpg" alt="headwrap" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>10. Headwrap(foulard à cheveux)</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/invisible locs.jpg" alt="invisible locks" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>11. Invisible locs</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/korobo braids.jpg" alt="korobo braids" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>12. Korobo braids</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/minitwists.jpg" alt="minitwists" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>13.Minitwists</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/puffy bubble braids.jpg" alt="puffy bubble braids" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>14. Puffy bubble braids</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/stylishbantouknots.jpg" alt="stylishbantouknots" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>15 Bantu knots avec quelque braids</h3>
                     </div>
                 </div>
-                <div class="slide">
+                <div class="item-horizantale">
                     <img src="images/tresseaufil.jpg" alt="tresseaufil" loading="lazy">
-                    <div class="slide-info">
+                    <div class="info-horizantale">
                         <h3>16.Tresse au fil</h3>
                     </div>
                 </div>
             </div>
-            <button class="prev" aria-label="Précédent">&#10094;</button>
-            <button class="next" aria-label="Suivant">&#10095;</button>
-
-        <div class="indicateurs">
         </div>
+    </section>
+    <section class="contacts" id="contact">
+        <h2><span>C</span>ontacts</h2>
+        <p>besoin d'un conseil, d'une information. n'hésiter pas à nous contacter!</p>
     </section>
 </body>
 </html>
